1.12/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-app
  template:
    metadata:
      labels:
        app: image-app
    spec:
      containers:
        - name: image-app
          image: image-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-images
              mountPath: /shared
      volumes:
        - name: shared-images
          persistentVolumeClaim:
            claimName: image-pvc
