1.12/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-app-svc
spec:
  selector:
    app: image-app
  ports:
    - port: 80
      targetPort: 3000
